--- a/lcbib.bib
+++ b/lcbib.bib
@@ -60,9 +60,9 @@ year = {2024},
 howpublished={\url{https://intersectmbo.github.io/formal-ledger-specifications/pdfs/cardano-ledger.pdf}}
 }
 
-@online{ethresearch_solvers,
+@online{ethresearch-solvers,
 	author = {{ETH} research},
-	title = {A decentralised solver architecture for executing intents on EVM blockchain,
+	title = {A decentralised solver architecture for executing intents on EVM blockchain},
 	year = 2023,
 	url = {https://ethresear.ch/t/a-decentralised-solver-architecture-for-executing-intents-on-evm-blockchain/16608},
 	urldate = {2024-09-07}
