--- a/model.tex
+++ b/model.tex
@@ -35,12 +35,16 @@ A block $b$ can extend the blockchain (i.e. update the current state $s \in \LSt
 applied as $\fun{checkBlock}~(s, b)$ returns $\true$. Then, the updated block state 
 is computed by $\fun{updateState}~(s, b)$. We do not give full specifications of 
 $\fun{checkBlock}$ or $\fun{updateState}$, as they are not required to model our light client approach.
-We assume that a \emph{full node} is one that is able to, given some verified state $s_0$ (e.g. a genesis state, 
-or a verified checkpoint state), and a list of blocks $[b_0, ..., b_k]$ that have been disseminated across the 
-network since the time of $s_0$, is able to compute the current state $s_{k}$ by applying 
+
+\textbf{Full Nodes.}
+Let $s_0$ be some verified state, e.g. a genesis state, 
+or a verified checkpoint state, and suppose $[b_0, ..., b_k]$ is a list of blocks 
+that have been disseminated across the network since the time slot of $s_0$. 
+We assume that a \emph{full node} is one that is to able to (1) compute the current state $s_{k}$ by applying 
 them in sequence, i.e. computing $s_{i+1} = \fun{updateState}~(s_i, b_i)$ for $0 \leq i < k$,
-and is able to determine if any of the blocks in the list are invalid. If all the 
-blocks result in valid updates (i.e. $\fun{checkBlock}~(s_i, b_i) = \true$), we say 
+(2) is able to determine if all of the blocks in the list are valid
+(i.e. $\fun{checkBlock}~(s_i, b_i) = \true$), and (3) is able to listen on the network for 
+new blocks. If all the blocks are valid, we say 
 that $[b_1, ..., b_k]$ forms a valid blockchain.
 
 
