--- a/lcbib.bib
+++ b/lcbib.bib
@@ -1,3 +1,45 @@
+@misc{cryptoeprint:2021/1657,
+	author = {Panagiotis Chatzigiannis and Foteini Baldimtsi and Konstantinos Chalkias},
+	title = {{SoK}: Blockchain Light Clients},
+	howpublished = {Cryptology {ePrint} Archive, Paper 2021/1657},
+	year = {2021},
+	url = {https://eprint.iacr.org/2021/1657}
+}
+
+@misc{cryptoeprint:2020/844,
+	author = {Yuan Lu and Qiang Tang and Guiling Wang},
+	title = {Generic Superlight Client for Permissionless Blockchains},
+	howpublished = {Cryptology {ePrint} Archive, Paper 2020/844},
+	year = {2020},
+	url = {https://eprint.iacr.org/2020/844}
+}
+
+@misc{cryptoeprint:2019/226,
+	author = {Benedikt Bünz and Lucianna Kiffer and Loi Luu and Mahdi Zamani},
+	title = {Flyclient: Super-Light Clients for Cryptocurrencies},
+	howpublished = {Cryptology {ePrint} Archive, Paper 2019/226},
+	year = {2019},
+	url = {https://eprint.iacr.org/2019/226}
+}
+
+@inproceedings{10.1145/3133956.3134096,
+	author = {Malavolta, Giulio and Moreno-Sanchez, Pedro and Kate, Aniket and Maffei, Matteo and Ravi, Srivatsan},
+	title = {Concurrency and Privacy with Payment-Channel Networks},
+	year = {2017},
+	isbn = {9781450349468},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/3133956.3134096},
+	doi = {10.1145/3133956.3134096},
+	abstract = {Permissionless blockchains protocols such as Bitcoin are inherently limited in transaction throughput and latency. Current efforts to address this key issue focus on off-chain payment channels that can be combined in a Payment-Channel Network (PCN) to enable an unlimited number of payments without requiring to access the blockchain other than to register the initial and final capacity of each channel. While this approach paves the way for low latency and high throughput of payments, its deployment in practice raises several privacy concerns as well as technical challenges related to the inherently concurrent nature of payments that have not been sufficiently studied so far. In this work, we lay the foundations for privacy and concurrency in PCNs, presenting a formal definition in the Universal Composability framework as well as practical and provably secure solutions. In particular, we present Fulgor and Rayo. Fulgor is the first payment protocol for PCNs that provides provable privacy guarantees for PCNs and is fully compatible with the Bitcoin scripting system. However, Fulgor is a blocking protocol and therefore prone to deadlocks of concurrent payments as in currently available PCNs. Instead, Rayo is the first protocol for PCNs that enforces non-blocking progress (i.e., at least one of the concurrent payments terminates). We show through a new impossibility result that non-blocking progress necessarily comes at the cost of weaker privacy. At the core of Fulgor and Rayo is Multi-Hop HTLC, a new smart contract, compatible with the Bitcoin scripting system, that provides conditional payments while reducing running time and communication overhead with respect to previous approaches. Our performance evaluation of Fulgor and Rayo shows that a payment with 10 intermediate users takes as few as 5 seconds, thereby demonstrating their feasibility to be deployed in practice.},
+	booktitle = {Proceedings of the 2017 ACM SIGSAC Conference on Computer and Communications Security},
+	pages = {455–471},
+	numpages = {17},
+	keywords = {bitcoin, concurrency, payment-channel network, privacy, scalability},
+	location = {Dallas, Texas, USA},
+	series = {CCS '17}
+}
+
 @InProceedings{blindsigs,
 author="Fuchsbauer, Georg
 and Wolf, Mathias",
